# the-few

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
config/: people.example.toml  sources.example.toml
src/the_few/: __init__.py  brief.py  cli.py  config.py  db.py  extract.py  fetch.py  paths.py  summarize.py  voice.py
