[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-few"
version = "0.1.0"
description = "Personal advisory board — follow thinkers, consult their perspectives"
authors = [{name = "Junjie Yu"}]
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "tomli>=2.0; python_version<'3.11'",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.scripts]
the-few = "the_few.cli:main"
