[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-few"
version = "0.1.0"
description = "A finite, summarized daily briefing from a few hand-picked high-signal sources"
authors = [{name = "Junjie Yu"}]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "feedparser>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
the-few = "the_few.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
